Added the home page for wdd130

--- a/aboutmeproject.html/index.html
+++ b/aboutmeproject.html/index.html
@@ -14,7 +14,7 @@
     <h2>Caroline Nyambura Ngina</h2>
     <h2>Carol</h2>
     <p>Hello everyone. My name is Caroline Nyambura but my friends and family call me Carol. 
-    I am from Kenya and am pursuing an Associate degree in software development. I was working in the middle East 
+    I am from Kenya and am pursuing an Associate Degree in software development. I was working in the middle East 
     as a recruiter but decided to switch my career since my priorities have changed over the years.
     <p>I decided to pursue this program since I have deep love for technology and it will equip me 
     with the skills required to tap into the job market. It also provides an opportunity to be flexible in terms of work.</p>
