--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,7 +10,7 @@
 
 <body>
   <header>
-    <h1>Software Chasers Site Plan</h1>
+    <h1>Rafture Adventures Site Plan</h1>
     <h2>Caroline N Ngina</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
@@ -20,32 +20,32 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>The purpose of the website is to establish a strong and captivating online presence for our business, 
-        enabling us to connect with readers in a dynamic and engaging way. With a sleek and modern design, 
-        it will showcase the brand identity while providing a seamless and intuitive user experience. 
-        Through the incorporation of cutting-edge technologies and digital marketing strategies, we aim to increase traffic 
-        to the site and drive conversions whether a potential reader is seeking information about our products or services, 
-        or looking to engage with our brand, our website will serve as the ultimate digital destination for all of their needs. 
-        By creating an engaging and captivating online presence, we will build a loyal customer base and ultimately, 
-        drive long-term success for my  business.</p>
+    <p>Welcome to Rafture Adventures! Our purpose is to provide an exciting and safe adventure experience that connects 
+      people with the natural beauty of our region. We believe that rafting is not just a fun activity, 
+      but also a way to promote environmental conservation and appreciation for nature.
+      By having a website, social media accounts, and online booking system, we can provide our customers with easy access 
+      to information about our services, pricing, and availability. This will also allow us to stay in touch with our customers 
+      and share updates about our company, as well as promote special offers and discounts.
+      In addition to providing convenience to our customers, our online presence will also help us to build a strong reputation and brand image. 
+      By sharing photos and videos of our tours, reviews from satisfied customers, and information about our commitment to safety 
+      and sustainability, we can establish ourselves as a trusted and reputable rafting company.
+      </p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>Our software provider company targets small to medium-sized businesses across various industries, 
-        including but not limited to healthcare, finance, education, and manufacturing with complex needs, 
-        who require a customizable software solution that can be tailored to their unique innovative and efficient 
-        solutions to streamline their operations and improve their bottom line. 
-        This includes IT professionals and decision-makers who are seeking a reliable and secure software provider 
-        that offers superior technical support and a proven track record of delivering results. By targeting these audiences, 
-        we aim to establish ourselves as a trusted and respected leader in the software provider industry, delivering 
-        cutting-edge technology solutions that help businesses achieve their goals and remain competitive in today's ever-changing market.</p>
+    <p>Our rafting Adventures welcomes adventure-seekers of all ages and skill levels who are looking for a unique and thrilling experience 
+      in the great outdoors. Whether you are an experienced rafter seeking a challenge, a family looking for a fun day out, 
+      or a group of friends seeking an exciting bonding experience, we have something for everyone.
+      Our tours cater to those who want to escape the city and immerse themselves in nature, while also providing a sense of community and 
+      connection with fellow adventurers. We prioritize safety and take great care to ensure that our tours are accessible and enjoyable for all 
+      participants.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="C:\Users\caroline\Pictures\my logo.png" alt="Logo image" />
+    <img src="C:\Users\caroline\Documents\SOFTWARE DEVELOPMENT\wdd130\wwr\images\Rafture logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
