--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img class="logo" src="C:\Users\caroline\Documents\SOFTWARE DEVELOPMENT\wdd130\wwr\images\Rafture logo.png" alt="Rafture Logo">
+            <img class="logo" src= "images/rafture-logo.png" alt="Rafture Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
