--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -9,9 +9,12 @@
 </head>
 
 <body>
+  <div id="content">
+    <header>
+. . .
   <header>
     <h1>Rafture Adventures Site Plan</h1>
-    <h2>Caroline N Ngina</h2>
+    <h2>Caroline N. Ngina</h2>
     <h2>WDD 130-01</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
@@ -138,6 +141,8 @@
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
+</footer>
+</div>
 </body>
 
 </html>
