--- a/wwr/index.html
+++ b/wwr/index.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img class="logo" src= "images/rafture-logo.png" alt="Rafture Logo">
@@ -73,7 +73,9 @@
                 <img src="images/instagram.png" alt="instagram icon">
             </a>
         </div>
-    </footer>
+        </footer>
+    </div>
+    
 </body>
 </html>
 
