--- a/wwr/index.html
+++ b/wwr/index.html
@@ -23,13 +23,13 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying Rafture water rafting">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying Rafture water rafting" style="width: 100%">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
             <h4>Make Memories with Rafture Adventures </h4>
             <div class='button-box'>
-                <a class='book' href="contactus.html">Book Now</a>
+                <a class='book' href="rates.html">Book Now</a>
             </div>
         </section>
     </div>
