--- a/duotech-unlimited/site-plan.html
+++ b/duotech-unlimited/site-plan.html
@@ -4,7 +4,7 @@
     
   <head>
     <meta charset="utf-8">
-    <title>Site Plan</title>
+    <title>Duotech Unlimited</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
   </head>
 
@@ -65,10 +65,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font:lora;  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: libre+caslon;  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
