--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -10,8 +10,7 @@
 
 <body>
   <div id="content">
-    <header>
-. . .
+
   <header>
     <h1>Rafture Adventures Site Plan</h1>
     <h2>Caroline N. Ngina</h2>
@@ -112,7 +111,7 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">page2</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr >
@@ -137,7 +136,9 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" >
 
-    <h3>[Page 2]</h3>
+    <h3>page2</h3>
+    
+    <img src="images/page2-wireframe.png" alt="page 2 wireframe" >
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
   </main>
