--- a/duotech-unlimited/site-plan.html
+++ b/duotech-unlimited/site-plan.html
@@ -128,29 +128,29 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        Website Essentials for Small Businesses
       </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/coding-photo2.jpg" alt="image for homepage">
+        <img src="images/tech-photo2.jpg" alt="image for homepage">
 
       </ul>
       <h3>[Page 2]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Choosing the Right Platform and Tools
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/comp-photo.jpg" alt="image for page2">
+        <img src="images/comp-photo2.jpg" alt="image for page2">
 
       </ul>
       <h3>[Page 3]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        Website Maintenance and Optimization
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/coding-photo.jpg" alt="image for page3">
+        <img src="images/tech-photo.jpg" alt="image for page3">
 
       </ul>
       <hr>
