--- a/duotech-unlimited/site-plan.html
+++ b/duotech-unlimited/site-plan.html
@@ -124,29 +124,78 @@
       <!-- --------Content Section -------------- -->
       <hr>
       <h2>
-        Content
+        Introduction
+Welcome to my personal website where I offer a friendly web development services tailored specifically for small business owners or individuals looking to enhance their online presence. 
+With a focus on simplicity, affordability, and impactful online presence, I aim to empower small businesses to establish their digital footprint and reach their target audience effectively.
+As a freelance web developer, I specialize in creating dynamic and engaging websites that leave a lasting impression. Whether you're a small business owner, a fellow developer, or someone 
+looking to enhance their online presence, my website is the perfect destination for you. With a focus on modern design, user experience, and cutting-edge technologies, I offer tailored 
+web development solutions that cater to your unique needs.
+
+Intended Audience:
+Small business owners: Entrepreneurs and small business owners who need a professional and effective online presence to showcase their products or services and who recognize the 
+importance of having a professional website but have limited technical knowledge or resources. They are looking for a beginner-friendly web developer who understands their unique needs 
+and can create a functional and visually appealing website that reflects their brand identity. These business owners value affordability, personalized service, and a collaborative approach
+Fellow web developers: Professionals in the web development field who are interested in exchanging ideas, staying updated with the latest trends, and collaborating on projects.
+Individuals looking to enhance their online presence: Anyone seeking to build a personal brand, portfolio, or blog, and require assistance in creating an impactful online presence.
+
+Three Topics for My Site:
+Website Essentials for Small Businesses: In today's digital age, having a professional and engaging website is essential for the success of your small business. Whether you're just starting 
+out or looking to enhance your existing online presence, these website essentials will help you create a compelling website that captivates your audience and drives business growth
+
+Choosing the Right Platform and Tools: This will guide small business owners in selecting the most suitable website platform and tools for their needs. It will provide an overview 
+of popular platforms discussing their pros and cons, introducing user-friendly website builders, drag-and-drop editors, and plugins that can simplify the website creation process. 
+By offering insights and recommendations,  aiming to help small business owners make informed decisions about their website's platform and tools.
+
+Website Maintenance and Optimization: Once you have built your small business website, it's important to prioritize its ongoing maintenance and optimization to ensure its performance, 
+security, and user experience. Regular updates often include bug fixes, security patches, and new features. Optimizing your website's performance is crucial for providing a smooth and 
+fast user experience. Slow-loading websites can frustrate visitors and negatively impact your search engine rankings.
+Additionally, exploring strategies for improving website performance, search engine optimization (SEO), and integrating essential features such as contact forms, social media links, and analytics. 
+Small business owners will gain knowledge and practical tips to keep their websites running smoothly and effectively.
+
+
+Why my site?
+One of the main reasons people would come to my site is to view my portfolio. Whether they are potential clients, employers, or fellow professionals, they would be interested in seeing examples of my work, 
+projects I have completed, and the skills I possess. My site would provide a visually appealing and organized display of my projects, demonstrating my expertise and creativity in web development.
+Compared to other websites, visitors may choose to come to my site because of its unique blend of personal branding, portfolio showcase, insightful content, and potential collaboration opportunities. 
+The combination of my professional expertise and the personalized touch of my personal site would create a distinct and memorable experience for visitors, setting it apart from generic web development resources or corporate websites.
+Another factor that sets us apart is our commitment to staying up-to-date with the latest trends and technologies in the web development industry. We understand that the field is constantly evolving, and new frameworks, tools, and techniques emerge regularly. 
+Therefore, we will regularly update our content to ensure that our visitors have access to the most relevant and cutting-edge information.
+
+Conclusion
+In conclusion, our website aims to be a one-stop destination for entreprenuers and individuals at all stages of their web development journey. We will provide comprehensive content, interactive tutorials, downloadable resources, 
+and a vibrant community forum to cater to the diverse needs of our audience. By offering high-quality information and staying current with industry trends, we aim to become a trusted resource, fostering growth and success in this exciting field.
+
+
       </h2>
-      <h3>Home page</h3>
+      <h3>Website Essentials for Small Businesses</h3>
       <p>
-        Website Essentials for Small Businesses
+        In today's digital age, having a professional and engaging website is essential for the success of your small business. Whether you're just starting out or looking to enhance your existing online presence, 
+        these website essentials will help you create a compelling website that captivates your audience and drives business growth.
+
       </p>
       <p>Images for the Home page</p>
         <img src="images/coding-photo2.jpg" alt="image for homepage">
         <img src="images/tech-photo2.jpg" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>Choosing the Right Platform and Tools</h3>
       <p>
-        Choosing the Right Platform and Tools
+        This will guide small business owners in selecting the most suitable website platform and tools for their needs. It will provide an overview of popular platforms discussing their pros and cons, introducing user-friendly website builders, 
+        drag-and-drop editors, and plugins that can simplify the website creation process. By offering insights and recommendations,  aiming to help small business owners make informed decisions about their website's platform and tools
       </p>
       <p>Images for the Page 2</p>
         <img src="images/comp-photo.jpg" alt="image for page2">
         <img src="images/comp-photo2.jpg" alt="image for page2">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Website Maintenance and Optimization</h3>
       <p>
-        Website Maintenance and Optimization
+        Once you have built your small business website, it's important to prioritize its ongoing maintenance and optimization to ensure its performance, security, and user experience. 
+        Regular updates often include bug fixes, security patches, and new features. Optimizing your website's performance is crucial for providing a smooth and fast user experience. 
+        Slow-loading websites can frustrate visitors and negatively impact your search engine rankings.
+        Additionally, exploring strategies for improving website performance, search engine optimization (SEO), and integrating essential features such as contact forms, social media links, and analytics. 
+        Small business owners will gain knowledge and practical tips to keep their websites running smoothly and effectively.
+
       </p>
       <p>Images for the Page 3</p>
         <img src="images/coding-photo.jpg" alt="image for page3">
