--- a/duotech-unlimited/site-plan.html
+++ b/duotech-unlimited/site-plan.html
@@ -103,10 +103,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          Blog <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          Contact Us  <!-- change this -->
         </div>
 
         <div class="top">
