--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -111,15 +111,14 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">page2</a>
+      <a href="#">Blog</a>
       <a href="#">Contact Us</a>
     </nav>
     <hr >
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
+      <div class="sm-page2">Blog
         <!-- this page will have a name later -->
       </div>
       <div class="sm-page3">Contact Us</div>
@@ -136,7 +135,7 @@
 
     <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" >
 
-    <h3>page2</h3>
+    <h3>Blog</h3>
     <img src="images/page2-wireframe.png" alt="page 2 wireframe" >
 
     <!-- <img src="#" alt="page 2 wireframe"> -->
