--- a/duotech-unlimited/site-plan.html
+++ b/duotech-unlimited/site-plan.html
@@ -48,7 +48,7 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/cc7700-fbfbfb-0a2472-0e6ba8-070706" target="_blank">https://coolors.co/cc7700-fbfbfb-0a2472-0e6ba8-070706</a>
+      Palette URL: <a href="https://coolors.co/fbfbfb-050710-D5A71C-0a2472-070706" target="_blank">https://coolors.co/fbfbfb-050710-D5A71C-0a2472-070706</a>
 
 
       <table class="colors">
@@ -175,7 +175,7 @@ and a vibrant community forum to cater to the diverse needs of our audience. By 
       </p>
       <p>Images for the Home page</p>
         <img src="images/coding-photo2.jpg" alt="image for homepage">
-        <img src="images/tech-photo2.jpg" alt="image for homepage">
+        <img src="images/web2-photo.png" alt="image for homepage">
 
       </ul>
       <h3>Choosing the Right Platform and Tools</h3>
@@ -198,8 +198,8 @@ and a vibrant community forum to cater to the diverse needs of our audience. By 
 
       </p>
       <p>Images for the Page 3</p>
-        <img src="images/coding-photo.jpg" alt="image for page3">
-        <img src="images/tech-photo.jpg" alt="image for page3">
+        <img src="images/img-opt.jpg" alt="image for page3">
+        <img src="images/web-opt2.jpg" alt="image for page3">
 
       </ul>
       <hr>
