--- a/duotech-unlimited/index.html
+++ b/duotech-unlimited/index.html
@@ -10,18 +10,21 @@
 </head>
 <body>
     <div id="content">
-    <header>
+
+
+    <!-- Side navigation -->
+    <div class="sidenav">
         <a id="logo_link" href="index.html">
             <img class="logo" src= "images/duotech-logo.png" alt="Duotech Logo">
         </a>
-        <nav>
-            <a href="index.html">Home</a>
-            <a href="about-us.html">About Us</a>
-            <a href="site-plan.html">Site Plan</a>
-            <a href="Blog.html">Blog</a>
-        </nav>
-    </header>
-    
+        <a href="index.html">Home</a>
+        <a href="about-us.html">About Us</a>
+        <a href="site-plan.html">Site Plan</a>
+        <a href="Blog.html">Blog</a>
+    </div>
+       
+
+
     <main>
     <div id="container">
         <img class="coding-photo2" src="images/coding-photo2.jpg" alt="home page photo">
