--- a/duotech-unlimited/blog.html
+++ b/duotech-unlimited/blog.html
@@ -10,17 +10,16 @@
 </head>
 <body>
     <div id="content">
-    <header>
-        <a id="logo_link" href="blog.html">
-            <img class="logo" src= "images/duotech-logo.png" alt="Duotech Logo">
-        </a>
-        <nav>
+                        <!-- Side navigation -->
+        <div class="sidenav">
+            <a id="logo_link" href="index.html">
+                <img class="logo" src= "images/duotech-logo.png" alt="Duotech Logo">
+            </a>
             <a href="index.html">Home</a>
             <a href="about-us.html">About Us</a>
             <a href="site-plan.html">Site Plan</a>
-            <a href="blog.html">Blog</a>
-        </nav>
-    </header>
+            <a href="Blog.html">Blog</a>    
+        </div>
     
     <main>
     <div>
